# solana-pubkey-miner

./: .gitignore  README.md
cuda/src/: Makefile  gpu-common.mk
cuda/src/cuda-ecc-ed25519/: common.cu  export.h  fe.cu  fe.h  ge.cu  ge.h  sc.cu  sc.h  sha512.cu  sha512.h  sign.cu  vanity.cu  vanity.h  verify.cu
cuda/src/cuda-headers/: gpu_common.h
cuda/src/cuda-sha256/: sha256.cu  tomcrypt_macros.h
fishing/: main.py  pyproject.toml
fishing/src/: api.py  app.py  core.py  settings.py  types.py
service/: pyproject.toml
service/src/: api.py  app.py  processor.py  settings.py  types.py
